--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,16 @@
 buildscript {
     repositories {
         jcenter()
+//        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'            // ADD THIS LINE
+
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+//        mavenCentral()
     }
 }
 
